--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build:dev": "cross-env NODE_ENV=development vite build && esno ./build/script/postBuild.ts",
+    "build:test": "cross-env vite build --mode test && esno ./build/script/postBuild.ts",
+    "build:prod": "cross-env NODE_ENV=production vite build && esno ./build/script/postBuild.ts",
     "preview": "vite preview",
     "clean:cache": "rimraf node_modules/.cache/ && rimraf node_modules/.vite",
     "clean:lib": "rimraf node_modules",
@@ -15,6 +17,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@ant-design/colors": "^6.0.0",
+    "@ant-design/icons-vue": "^6.1.0",
     "@vueuse/core": "^9.1.0",
     "ant-design-vue": "^3.2.11",
     "axios": "^0.27.2",
@@ -29,37 +33,59 @@
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
+    "@purge-icons/generated": "^0.9.0",
+    "@types/node": "^18.7.2",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
+    "@vitejs/plugin-legacy": "^2.0.1",
     "@vitejs/plugin-vue": "^3.0.2",
     "@vitejs/plugin-vue-jsx": "^2.0.0",
     "autoprefixer": "^10.4.8",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
     "eslint": "^8.21.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.3.0",
+    "esno": "^0.16.3",
+    "fs-extra": "^10.1.0",
     "husky": "^8.0.0",
+    "inquirer": "^9.1.0",
     "less": "^4.1.3",
     "lint-staged": "^13.0.3",
+    "mockjs": "^1.1.0",
+    "picocolors": "^1.0.0",
     "postcss": "^8.4.16",
     "postcss-html": "^1.5.0",
     "postcss-less": "^6.0.0",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
+    "rollup": "^2.77.3",
+    "rollup-plugin-visualizer": "^5.7.1",
     "stylelint": "^14.10.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recommended": "^9.0.0",
     "stylelint-config-recommended-vue": "^1.4.0",
     "stylelint-config-standard": "^27.0.0",
     "stylelint-order": "^5.0.0",
+    "terser": "^5.14.2",
     "typescript": "^4.7.4",
+    "unplugin-auto-import": "^0.11.1",
+    "unplugin-vue-components": "^0.22.4",
     "vite": "^3.0.6",
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-html": "^3.2.0",
+    "vite-plugin-mkcert": "^1.9.0",
+    "vite-plugin-mock": "^2.9.6",
+    "vite-plugin-pwa": "^0.12.3",
+    "vite-plugin-svg-icons": "^2.0.1",
+    "vite-plugin-theme": "^0.8.6",
+    "vite-plugin-vue-setup-extend": "^0.4.0",
+    "vite-plugin-windicss": "^1.8.7",
     "vue-eslint-parser": "^9.0.3"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
       "prettier --write"
     ],
     "{!(package)*.json,*.code-snippets,.!(browserslist)*rc}": [
@@ -69,7 +95,6 @@
       "prettier --write"
     ],
     "*.vue": [
-      "eslint --fix",
       "prettier --write",
       "stylelint --fix"
     ],
