--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vueuse/core": "^9.1.0",
     "ant-design-vue": "^3.2.11",
     "axios": "^0.27.2",
+    "crypto-js": "^4.1.1",
     "dayjs": "^1.11.4",
     "lodash-es": "^4.17.21",
     "pinia": "^2.0.18",
