--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.4",
     "lodash-es": "^4.17.21",
+    "nprogress": "^0.2.0",
     "path-to-regexp": "^6.2.1",
     "pinia": "^2.0.18",
     "qs": "^6.11.0",
