--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "vite-plugin-mock": "^2.9.6",
     "vite-plugin-purge-icons": "^0.9.0",
     "vite-plugin-pwa": "^0.12.3",
+    "vite-plugin-style-import": "^2.0.0",
     "vite-plugin-svg-icons": "^2.0.1",
     "vite-plugin-theme": "^0.8.6",
     "vite-plugin-vue-setup-extend": "^0.4.0",
