--- a/package.json
+++ b/package.json
@@ -96,7 +96,8 @@
     "vite-plugin-theme": "^0.8.6",
     "vite-plugin-vue-setup-extend": "^0.4.0",
     "vite-plugin-windicss": "^1.8.7",
-    "vue-eslint-parser": "^9.0.3"
+    "vue-eslint-parser": "^9.0.3",
+    "vue-types": "^4.2.1"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
